dev/consumer/test-deployment-changes-consumer/main/patches/external-apis/therma-energy-webhooks/main/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: therma-energy-webhooks
spec:
  rules:
    - host: webhooks.energy.dev.helloatka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: therma-energy-webhooks
                port:
                  number: 80
